<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".user.UserHomeActivity">


    <TextView
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/booking_date" />

    <TextView
        android:id="@+id/txtBookingDate"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold|italic"
        app:drawableEndCompat="@drawable/ic_baseline_calendar_month_24" />

    <androidx.cardview.widget.CardView
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#E2E2E2"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/etCardHolderName"
                android:background="@drawable/border_et_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/card_holder_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etCardNumber"
                android:layout_width="match_parent"
                android:background="@drawable/border_et_bg"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/card_no"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="16"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etExpiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_et_bg"
                    android:hint="@string/expiry_date"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="5"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etCVV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_et_bg"
                    android:layout_weight="1"
                    android:hint="@string/cvv"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLength="3"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry_fee" />

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_charges" />

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_amount" />

        <TextView
            android:id="@+id/txtTotalAmount"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="28"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@color/teal_700"
        android:text="@string/pay_and_book"
        android:textColor="@color/white" />

</LinearLayout>